force-app/main/default/objects/Capability_Role__c/Capability_Role__c.object-meta.xml
<CustomObject>
    <label>Capability Role</label>
    <pluralLabel>Capability Roles</pluralLabel>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Project role definition for capability assignments (e.g., Consultant, Developer, Architect)</description>
</CustomObject>