force-app/main/default/objects/Capability_Role__c/fields/Capability_Map__c.field-meta.xml
<CustomField>
    <fullName>Capability_Map__c</fullName>
    <label>Capability Map</label>
    <type>MasterDetail</type>
    <referenceTo>Capability_Map__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>