force-app/main/default/objects/Capability_Role__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Text</type>
    <length>7</length>
    <description>Hex color code for UI display (e.g., #0176D3)</description>
</CustomField>