force-app/main/default/objects/Capability_Role__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <label>Hourly Rate</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Hourly rate for cost calculation</description>
</CustomField>